chore: update code to avoid ide warnning